<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="protect.babymonitor.MonitorActivity" >

    <TextView
        android:id="@+id/parentDeviceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/parentDevice"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dip" />

    <Button
        android:id="@+id/discoverChildButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discoverChild"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/discoverChildDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discoverChildDescription"
        android:textSize="14sp" />

    <Space
       android:layout_width="match_parent"
       android:layout_height="15dip" />

    <Button
        android:id="@+id/enterChildAddressButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterChildAddress"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/enterChildAddressDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterChildAddressDescription"
        android:textSize="14sp" />

</LinearLayout>